made slides and report to show different formats. added in missing reference in bibliography.

--- a/slides-info-reproducible-research/minnier_bibliography.bib
+++ b/slides-info-reproducible-research/minnier_bibliography.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jessica Minnier at 2016-01-02 17:05:44 -0800 
+%% Created for Jessica Minnier at 2016-04-20 14:37:37 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{wilson2014best,
+	Author = {Wilson, Greg and Aruliah, DA and Brown, C Titus and Hong, Neil P Chue and Davis, Matt and Guy, Richard T and Haddock, Steven HD and Huff, Kathryn D and Mitchell, Ian M and Plumbley, Mark D and others},
+	Date-Added = {2016-04-20 21:37:35 +0000},
+	Date-Modified = {2016-04-20 21:37:35 +0000},
+	Journal = {PLoS Biol},
+	Number = {1},
+	Pages = {e1001745},
+	Publisher = {Public Library of Science},
+	Title = {Best practices for scientific computing},
+	Volume = {12},
+	Year = {2014}}
 
 @article{sandve2013ten,
 	Author = {Sandve, Geir Kjetil and Nekrutenko, Anton and Taylor, James and Hovig, Eivind},
