better describe nih link

--- a/slides-info-reproducible-research/repro-research-summary.Rmd
+++ b/slides-info-reproducible-research/repro-research-summary.Rmd
@@ -133,7 +133,7 @@ NIH Training Module: <https://grants.nih.gov/reproducibility/module_1/presentati
 
 NIH held a joint workshop in June 2014 with the Nature Publishing Group and Science on the issue of reproducibility and rigor of research findings
 
-A video/slide presentation about this topic can be found here:
+A video/slide presentation about this topic and how it applies to grant applications and peer review can be found here:
 <http://grants.nih.gov/grants/policy/rigor/NIH_Policy_Rigor_For_Reviewers/presentation.html>
 
 ## NIH Principles and Guidelines for Reporting Preclinical Research
