--- a/slides-info-reproducible-research/repro-research-summary-for-pdf.Rmd
+++ b/slides-info-reproducible-research/repro-research-summary-for-pdf.Rmd
@@ -2,9 +2,8 @@
 title: "Reproducible Research in Statistics"
 author: "Jessica Minnier -- Knight BSR"
 date: "June 16, 2016"
-output:
-  slidy_presentation:
-    theme: cerulean
+fontsize: 10pt
+output: beamer_presentation
 footer: 'Knight BSR + CRAB Retreat: Reproducible Research'
 bibliography: minnier_bibliography.bib
 ---
